@@ -5,6 +5,10 @@
 # Distributed under the GPL v2
 # $Id$
 
+  06 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> doc/genkernel.8.txt,
+  gen_cmdline.sh:
+  Update documentation for new initramfs compression.
+
   06 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/config.sh,
   gen_cmdline.sh, gen_determineargs.sh, gen_initramfs.sh, genkernel.conf:
   Import customizable compression for initramfs, based on Pentoo development.
